# NoiseChain

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING_ko.md  README.md  pyproject.toml  requirements.txt
demos/: README.md  __init__.py  run_investor_package.py
demos/results/: benchmark_report_20260114_002807.json
docs/: NoiseChain_Gantree.md  NoiseChain_MVP_Design.md  NoiseChain_MVP_Workplan.md  NoiseChain_Specification.md  NoiseChain_Specification_ko.md
src/noisechain/: __init__.py  demo.py  engine.py
src/noisechain/crypto/: __init__.py  keys.py  signing.py
src/noisechain/models/: __init__.py  noise_data.py
src/noisechain/pipeline/: __init__.py  correlation.py  features.py
src/noisechain/sensors/: __init__.py  base.py  hub.py  virtual_drivers.py
src/noisechain/storage/: __init__.py  repository.py
src/noisechain/time/: __init__.py  ntp_client.py  timestamp.py
src/noisechain/token/: __init__.py  builder.py  schema.py
src/noisechain/verification/: __init__.py  validator.py
tests/: __init__.py  test_correlation.py  test_crypto.py  test_features.py  test_noise_data.py  test_pipeline.py  test_sensors.py  test_storage.py  test_time.py  test_token.py  test_verification.py
